디자인 수정 하지만 버그 있음